@@ -1,5 +1,9 @@
 1999-02-02  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
+	* about.cc (handle_configure_event): Made to a static member.
+
+	* glclock.h (class about_dialog): Add static members.
+
 	* about.cc (handle_ok): Made to a static member.
 	(show): Handle the case of parent == NULL.
 	(handle_delete_event): New method.
